--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,13 +25,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Node
+      - name: Enable Corepack
+        run: corepack enable
+      - name: Use Node 22
         uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: 'yarn'
       - name: Install dependencies
-        run: corepack enable yarn && yarn
+        run: yarn --immutable
       - name: Build
         run: yarn build
       - name: Setup Pages
@@ -39,7 +41,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload dist folder
           path: './dist'
       - name: Deploy to GitHub Pages
         id: deployment
