--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "vue": "3.5.12"
   },
   "devDependencies": {
+    "@eslint/js": "9.14.0",
     "@types/node": "22.9.0",
     "@vitejs/plugin-vue": "5.1.4",
+    "eslint": "9.14.0",
+    "eslint-plugin-vue": "9.30.0",
+    "globals": "15.12.0",
     "typescript": "5.6.2",
+    "typescript-eslint": "8.14.0",
     "vite": "5.4.10",
     "vue-tsc": "2.1.8"
   },
