--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,10 @@ jobs:
           cache: 'yarn'
       - name: Install dependencies
         run: yarn --immutable
+      - name: Run lint
+        run: yarn lint
+      - name: Run tests
+        run: yarn test
       - name: Build
         run: yarn build
       - name: Setup Pages
