--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint",
+    "test": "vitest run"
   },
   "dependencies": {
     "vue": "3.5.12"
@@ -21,6 +23,7 @@
     "typescript": "5.6.2",
     "typescript-eslint": "8.14.0",
     "vite": "5.4.10",
+    "vitest": "2.1.4",
     "vue-tsc": "2.1.8"
   },
   "packageManager": "yarn@4.5.1"
